// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index selectors getConfigApplying should return configApplying obj 1`] = `
Object {
  "activeConfigData": null,
  "configData": null,
  "id": null,
  "loaded": false,
  "serviceId": null,
  "visible": false,
}
`;

exports[`index selectors getConfigDiffModal should return configDiffModal obj 1`] = `
Object {
  "configsData": Object {},
  "id": null,
  "loaded": false,
  "oldId": null,
  "serviceId": null,
  "visible": false,
}
`;

exports[`index selectors getConfigPreview should return configPreview obj 1`] = `
Object {
  "configData": null,
  "id": null,
  "serviceId": null,
  "visible": false,
}
`;

exports[`index selectors getErrors should return errors obj 1`] = `
Object {
  "byId": Object {
    "global": Array [
      "global message",
    ],
    "id1": Array [
      "message 1",
      "message 2",
    ],
    "id2": Array [
      "message 3",
      "message 4",
    ],
  },
}
`;

exports[`index selectors getMetric should return metric obj 1`] = `
Object {
  "http_codes": Object {
    "data": Object {
      "1524759180000": Object {
        "200": 2368,
        "204": 85,
        "301": 182,
        "302": 11,
        "304": 1,
        "404": 173,
      },
      "1524759240000": Object {
        "200": 2797,
        "204": 100,
        "301": 232,
        "302": 20,
        "304": 7,
        "404": 206,
      },
    },
    "loaded": true,
    "loading": false,
    "range": 10,
  },
}
`;

exports[`index selectors getService should return service obj 1`] = `
Object {
  "applyingConfig": Object {
    "id": null,
    "progress": false,
    "target": null,
  },
  "comment": "",
  "configs": Object {
    "byId": Object {},
    "items": Array [],
    "loaded": false,
    "offset": 0,
    "total": 0,
  },
  "loaded": false,
  "service": null,
  "setup": Object {
    "loaded": false,
  },
}
`;

exports[`index selectors getServices should return services obj 1`] = `
Object {
  "items": Array [],
  "loaded": false,
  "loading": false,
}
`;
